@@ -7,16 +7,21 @@ import co.dalicious.client.oauth.SnsLoginResponseDto;
 import co.dalicious.client.oauth.SnsLoginService;
 import co.dalicious.data.redis.entity.PushAlarmHash;
 import co.dalicious.data.redis.repository.PushAlarmHashRepository;
+import co.dalicious.domain.application_form.utils.ApplicationUtil;
+import co.dalicious.domain.client.dto.GroupCountDto;
 import co.dalicious.domain.client.dto.SpotListResponseDto;
 import co.dalicious.domain.client.entity.Group;
 import co.dalicious.domain.client.entity.MealInfo;
 import co.dalicious.domain.client.entity.OpenGroup;
-import co.dalicious.domain.client.mapper.GroupResponseMapper;
-import co.dalicious.domain.client.repository.GroupRepository;
+import co.dalicious.domain.client.entity.enums.GroupDataType;
+import co.dalicious.domain.client.repository.QGroupRepository;
+import co.dalicious.domain.food.entity.DailyFood;
 import co.dalicious.domain.food.entity.Food;
+import co.dalicious.domain.food.repository.DailyFoodRepository;
 import co.dalicious.domain.food.repository.FoodRepository;
 import co.dalicious.domain.order.entity.OrderDailyFood;
 import co.dalicious.domain.order.entity.OrderItemDailyFood;
+import co.dalicious.domain.order.entity.enums.OrderStatus;
 import co.dalicious.domain.order.repository.QOrderDailyFoodRepository;
 import co.dalicious.domain.payment.dto.*;
 import co.dalicious.domain.payment.entity.CreditCardInfo;
@@ -26,21 +31,24 @@ import co.dalicious.domain.payment.repository.CreditCardInfoRepository;
 import co.dalicious.domain.payment.repository.QCreditCardInfoRepository;
 import co.dalicious.domain.payment.service.PaymentService;
 import co.dalicious.domain.user.dto.*;
+import co.dalicious.domain.user.dto.SaveDailyReportDto;
 import co.dalicious.domain.user.entity.*;
 import co.dalicious.domain.user.entity.enums.*;
+import co.dalicious.domain.user.mapper.DailyReportMapper;
 import co.dalicious.domain.user.mapper.UserPreferenceMapper;
 import co.dalicious.domain.user.mapper.UserSelectTestDataMapper;
 import co.dalicious.domain.user.repository.*;
-import co.dalicious.domain.user.util.ClientUtil;
+import co.dalicious.integration.client.user.utils.ClientUtil;
 import co.dalicious.domain.user.util.FoundersUtil;
 import co.dalicious.domain.user.util.MembershipUtil;
 import co.dalicious.domain.user.validator.UserValidator;
+import co.dalicious.integration.client.user.mapper.UserGroupMapper;
 import co.dalicious.system.enums.FoodTag;
 import co.dalicious.system.enums.RequiredAuth;
-import co.dalicious.system.util.DateUtils;
-import co.kurrant.app.public_api.dto.board.AlarmResponseDto;
 import co.kurrant.app.public_api.dto.board.PushResponseDto;
+import co.kurrant.app.public_api.dto.order.OrderItemDailyFoodToDailyReportDto;
 import co.kurrant.app.public_api.dto.user.*;
+import co.kurrant.app.public_api.mapper.DailyReport.OrderItemDailyFoodDailyReportMapper;
 import co.kurrant.app.public_api.mapper.user.UserHomeInfoMapper;
 import co.kurrant.app.public_api.mapper.user.UserPersonalInfoMapper;
 import co.kurrant.app.public_api.model.SecurityUser;
@@ -48,11 +56,13 @@ import co.kurrant.app.public_api.service.UserService;
 import co.kurrant.app.public_api.service.UserUtil;
 import co.kurrant.app.public_api.util.VerifyUtil;
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.querydsl.core.Tuple;
 import exception.ApiException;
 import exception.ExceptionEnum;
 import lombok.RequiredArgsConstructor;
 import org.hibernate.Hibernate;
 import org.json.simple.parser.ParseException;
+import org.springframework.security.core.parameters.P;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -85,8 +95,6 @@ public class UserServiceImpl implements UserService {
     private final UserGroupRepository userGroupRepository;
     private final UserHomeInfoMapper userHomeInfoMapper;
     private final UserPersonalInfoMapper userPersonalInfoMapper;
-    private final GroupResponseMapper groupResponseMapper;
-    private final GroupRepository groupRepository;
     private final QCreditCardInfoRepository qCreditCardInfoRepository;
     private final CreditCardInfoRepository creditCardInfoRepository;
     private final CreditCardInfoMapper creditCardInfoMapper;
@@ -105,6 +113,15 @@ public class UserServiceImpl implements UserService {
     private final UserSelectTestDataRepository userSelectTestDataRepository;
     private final UserSelectTestDataMapper userSelectTestDataMapper;
     private final PushAlarmHashRepository pushAlarmHashRepository;
+    private final DailyReportMapper dailyReportMapper;
+    private final DailyReportRepository dailyReportRepository;
+    private final QDailyReportRepository qDailyReportRepository;
+    private final OrderItemDailyFoodDailyReportMapper orderItemDailyFoodDailyReportMapper;
+    private final UserGroupMapper userGroupMapper;
+    private final QGroupRepository qGroupRepository;
+    private final DailyFoodRepository dailyFoodRepository;
+    private final ApplicationUtil applicationUtil;
+
 
     @Override
     @Transactional
@@ -114,6 +131,7 @@ public class UserServiceImpl implements UserService {
         userHomeResponseDto.setMembershipUsingPeriod(membershipUtil.getUserPeriodOfUsingMembership(user));
         userHomeResponseDto.setFoundersNumber(foundersUtil.getFoundersNumber(user));
         userHomeResponseDto.setLeftFoundersNumber(foundersUtil.getLeftFoundersNumber());
+        userHomeResponseDto.setRequestedMySpotDto(applicationUtil.findExistRequestedMySpot(user.getId()));
         return userHomeResponseDto;
     }
 
@@ -349,7 +367,8 @@ public class UserServiceImpl implements UserService {
         // 유저 정보 가져오기
         User user = userUtil.getUser(securityUser);
         List<PushCondition> userPushConditionList = user.getPushConditionList();
-        List<PushCondition> pushConditionList = List.of(PushCondition.class.getEnumConstants());
+        List<PushCondition> pushConditionList = new ArrayList<>(Arrays.asList(PushCondition.values()));
+        pushConditionList.removeAll(PushCondition.getNoShowCondition());
 
         return pushConditionList.stream().map(c -> userPersonalInfoMapper.toMarketingAlarmResponseDto(userPushConditionList, c)).toList();
     }
@@ -360,15 +379,14 @@ public class UserServiceImpl implements UserService {
         // 유저 정보 가져오기
         User user = userUtil.getUser(securityUser);
         List<PushCondition> userPushConditionList = new ArrayList<>();
-        if(user.getPushConditionList() != null && !user.getPushConditionList().isEmpty()) {
+        if (user.getPushConditionList() != null && !user.getPushConditionList().isEmpty()) {
             userPushConditionList = user.getPushConditionList();
         }
 
-        if(marketingAlarmDto.getIsActive()){
+        if (marketingAlarmDto.getIsActive()) {
             PushCondition pushCondition = PushCondition.ofCode(marketingAlarmDto.getCode());
             userPushConditionList.add(pushCondition);
-        }
-        else {
+        } else {
             PushCondition pushCondition = userPushConditionList.stream()
                     .filter(c -> c.getCode().equals(marketingAlarmDto.getCode()))
                     .findFirst().orElseThrow(() -> new ApiException(ExceptionEnum.ALREADY_NOT_ACTIVE));
@@ -405,27 +423,8 @@ public class UserServiceImpl implements UserService {
         Integer membershipPeriod = membershipUtil.getUserPeriodOfUsingMembership(user);
 
         // 식사 일정 개수 구하기
-        Integer dailyMealCount = 0;
         List<OrderItemDailyFood> orderItemDailyFoods = qOrderDailyFoodRepository.findAllMealScheduleByUser(user);
-        List<OrderItemDailyFood> selectedOrderDailyDailyFoods = new ArrayList<>();
-        for (OrderItemDailyFood orderItemDailyFood : orderItemDailyFoods) {
-            OrderDailyFood orderDailyFood = (OrderDailyFood) Hibernate.unproxy(orderItemDailyFood.getOrder());
-            if (orderItemDailyFood.getDailyFood().getServiceDate().equals(LocalDate.now())) {
-                Optional<MealInfo> mealInfo = orderDailyFood.getSpot().getMealInfos().stream()
-                        .filter(v -> v.getDiningType().equals(orderItemDailyFood.getDailyFood().getDiningType())).findAny();
-                if (mealInfo.isEmpty()) {
-                    throw new ApiException(ExceptionEnum.NOT_FOUND_MEAL_INFO);
-                }
-                LocalTime deliveryTime = mealInfo.get().getDeliveryTime();
-                if (LocalTime.now().isAfter(deliveryTime)) {
-                    continue;
-                }
-            }
-            selectedOrderDailyDailyFoods.add(orderItemDailyFood);
-        }
-        for (OrderItemDailyFood orderItemDailyFood : selectedOrderDailyDailyFoods) {
-            dailyMealCount += orderItemDailyFood.getCount();
-        }
+        Integer dailyMealCount = getDailyFoodScheduleCount(orderItemDailyFoods);
 
         return UserInfoDto.builder()
                 .user(user)
@@ -436,10 +435,11 @@ public class UserServiceImpl implements UserService {
 
     @Override
     @Transactional
-    public void settingGroup(SecurityUser securityUser, BigInteger groupId) {
+    public void settingOpenGroup(SecurityUser securityUser, BigInteger groupId) {
         User user = userUtil.getUser(securityUser);
-        Group group = groupRepository.findById(groupId)
-                .orElseThrow(() -> new ApiException(ExceptionEnum.NOT_FOUND));
+        Group group = qGroupRepository.findGroupByTypeAndId(groupId, GroupDataType.OPEN_GROUP);
+        if (group == null) throw new ApiException(ExceptionEnum.GROUP_NOT_FOUND);
+
         List<UserGroup> userGroups = user.getGroups();
 
         // TODO: 그룹 슬롯 증가의 경우 반영 필요
@@ -457,20 +457,16 @@ public class UserServiceImpl implements UserService {
                 selectedGroup.get().updateStatus(ClientStatus.BELONG);
                 return;
             }
-            throw new ApiException(ExceptionEnum.ALREADY_EXISTING_GROUP);
+            return;
         }
 
-        UserGroup userCorporation = UserGroup.builder()
-                .clientStatus(ClientStatus.BELONG)
-                .user(user)
-                .group(group)
-                .build();
+        UserGroup userCorporation = userGroupMapper.toUserGroup(user, group, ClientStatus.BELONG);
         userGroupRepository.save(userCorporation);
     }
 
     @Override
     @Transactional
-    public List<SpotListResponseDto> getClients(SecurityUser securityUser) {
+    public GroupCountDto getClients(SecurityUser securityUser) {
         User user = userUtil.getUser(securityUser);
         // 그룹/스팟 정보 가져오기
         List<UserGroup> userGroups = user.getGroups();
@@ -480,11 +476,23 @@ public class UserServiceImpl implements UserService {
         for (UserGroup userGroup : userGroups) {
             // 현재 활성화된 유저 그룹일 경우만 가져오기
             if (userGroup.getClientStatus() == ClientStatus.BELONG) {
-                Group group = userGroup.getGroup();
-                spotListResponseDtoList.add(groupResponseMapper.toDto(group));
+                SpotListResponseDto spotListResponseDto = userGroupMapper.toSpotListResponseDto(userGroup);
+                spotListResponseDtoList.add(spotListResponseDto);
             }
         }
-        return spotListResponseDtoList;
+        // 기업 -> 공유 -> 마이 스팟 별로 정렬.
+        spotListResponseDtoList = spotListResponseDtoList.stream().sorted(Comparator.comparing(SpotListResponseDto::getSpotType)).sorted(Comparator.comparingInt(dto -> {
+                    int spotType = dto.getSpotType();
+                    if (spotType == 0) {
+                        return 0;
+                    } else if (spotType == 2) {
+                        return 1;
+                    } else {
+                        return 2;
+                    }
+                }))
+                .toList();
+        return userGroupMapper.toGroupCountDto(spotListResponseDtoList);
     }
 
     @Override
@@ -495,10 +503,9 @@ public class UserServiceImpl implements UserService {
                 .filter(v -> v.getProvider().equals(Provider.GENERAL))
                 .findAny();
 
-        if(user.getEmail().contains("appleid")) {
+        if (user.getEmail().contains("appleid")) {
             return 3;
-        }
-        else return 2;
+        } else return 2;
     }
 
     @Override
@@ -899,7 +906,7 @@ public class UserServiceImpl implements UserService {
         List<UserPreference> preferenceList = userPreferenceRepository.findAllByUserId(user.getId());
 
         UserPreference userPreference = userPreferenceMapper.toEntity(user, userPreferenceDto);
-        List<FoodTag> foodTags  = userPreference.getFavoriteCountryFood();
+        List<FoodTag> foodTags = userPreference.getFavoriteCountryFood();
 
 //        foodTags = foodTags.stream()
 //                .filter(v -> v.getCode().equals(1))
@@ -907,12 +914,12 @@ public class UserServiceImpl implements UserService {
 //        userPreference.updateFavoriteCountryFood(foodTags);
 
         //기존에 있는 정보라면 수정
-        if (!preferenceList.isEmpty()){
+        if (!preferenceList.isEmpty()) {
             //삭제 후 저장
             qUserPreferenceRepository.deleteOthers(user.getId());
             userPreferenceRepository.save(userPreference);
 
-            for (UserSelectTestDataDto selectData :  userPreferenceDto.getUserSelectTestDataList()){
+            for (UserSelectTestDataDto selectData : userPreferenceDto.getUserSelectTestDataList()) {
                 UserSelectTestData userSelectTestData = userSelectTestDataMapper.toEntity(selectData.getSelectedFoodId(), selectData.getUnselectedFoodId(), userPreference.getId(), userPreference.getUser());
                 userSelectTestDataRepository.save(userSelectTestData);
             }
@@ -921,14 +928,13 @@ public class UserServiceImpl implements UserService {
         }
 
         UserPreference saveResult = userPreferenceRepository.save(userPreference);
-        if (saveResult.getId() == null){
+        if (saveResult.getId() == null) {
             return "유저 정보 저장에 실패했습니다.";
         }
-        for (UserSelectTestDataDto selectData :  userPreferenceDto.getUserSelectTestDataList()){
+        for (UserSelectTestDataDto selectData : userPreferenceDto.getUserSelectTestDataList()) {
             UserSelectTestData userSelectTestData = userSelectTestDataMapper.toEntity(selectData.getSelectedFoodId(), selectData.getUnselectedFoodId(), saveResult.getId(), saveResult.getUser());
             userSelectTestDataRepository.save(userSelectTestData);
         }
-
 
 
         return "유저 정보 저장에 성공했습니다.";
@@ -938,7 +944,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public Object getCountry() {
         List<String> countryList = new ArrayList<>();
-        for (int i = 1; i < Country.values().length+1; i++) {
+        for (int i = 1; i < Country.values().length + 1; i++) {
             countryList.add(Country.ofCodeByString(i));
         }
         return countryList;
@@ -954,7 +960,7 @@ public class UserServiceImpl implements UserService {
                     .filter(v -> v.getCategory().equals("알레르기 체크"))
                     .toList();
 
-            for (FoodTag tag : tagList){
+            for (FoodTag tag : tagList) {
                 foodTagList.add(tag.getTag());
             }
 
@@ -966,7 +972,7 @@ public class UserServiceImpl implements UserService {
                 .filter(v -> v.getCategory().equals("국가"))
                 .toList();
 
-        for (FoodTag countryTag : countryList){
+        for (FoodTag countryTag : countryList) {
             foodTagList.add(countryTag.getTag());
         }
 
@@ -977,16 +983,16 @@ public class UserServiceImpl implements UserService {
     public Object getJobType(Integer category, String code) {
         //묶여있는 직종의 코드까지 같이 보내주기 위해 맵으로 된 목록 생성
         List<Map<String, String>> jobTypeResultList = new ArrayList<>();
-        Map<String,String> jobTypeMap = new HashMap<>();
+        Map<String, String> jobTypeMap = new HashMap<>();
 
-        if (category == 1){
-        //코드가 1이라면 상세 직종을 반환
+        if (category == 1) {
+            //코드가 1이라면 상세 직종을 반환
             List<JobType> jobTypeList = Arrays.stream(JobType.values())
                     .filter(v -> v.getCategory().equals(code))
                     .toList();
             //상세 직종을 반환할 목록 생성
             List<String> jobTypeDetailList = new ArrayList<>();
-            for (JobType jobType : jobTypeList){
+            for (JobType jobType : jobTypeList) {
                 jobTypeDetailList.add(jobType.getName());
             }
 
@@ -997,7 +1003,7 @@ public class UserServiceImpl implements UserService {
                 .filter(v -> v.getCategory().equals("묶음"))
                 .toList();
         //이름과 코드를 같이 보내준다.
-        for (JobType jobType : jobTypeList){
+        for (JobType jobType : jobTypeList) {
             jobTypeMap.put(jobType.getCode().toString(), jobType.getName());
         }
         jobTypeResultList.add(jobTypeMap);
@@ -1010,7 +1016,7 @@ public class UserServiceImpl implements UserService {
         //값을 저장해줄 LIST 생성
         List<UserPreferenceFoodImageResponseDto> resultList = new ArrayList<>();
 
-        for (BigInteger foodId: foodIds ) {
+        for (BigInteger foodId : foodIds) {
 
             UserPreferenceFoodImageResponseDto responseDto = new UserPreferenceFoodImageResponseDto();
             //유효한 FoodId 인지 검증
@@ -1036,17 +1042,17 @@ public class UserServiceImpl implements UserService {
         List<UserTestDataDto> userTestDataList = new ArrayList<>();
         //테스트데이터 조회
         List<UserTasteTestData> userTasteTestDataList = userTasteTestDataRepository.findAll();
-        for (UserTasteTestData testData : userTasteTestDataList){
+        for (UserTasteTestData testData : userTasteTestDataList) {
             UserTestDataDto userTestData = new UserTestDataDto();
             Map<BigInteger, String> foodImageMap = new HashMap<>();
             List<String> stringList = Arrays.stream(testData.getFoodIds().split(",")).toList();
-            for (String id : stringList){
+            for (String id : stringList) {
                 String foodId = id.replace(" ", "");
                 //food 조회
                 Food food = foodRepository.findById(BigInteger.valueOf(Long.parseLong(foodId)))
                         .orElseThrow(() -> new ApiException(ExceptionEnum.NOT_FOUND_FOOD));
                 //food의 imageUrl 가져오기
-                if (food.getImages().size() != 0){
+                if (food.getImages().size() != 0) {
                     String url = food.getImages().get(0).getLocation();
                     //id와 url을 같이 보내주기 위해 맵에 put
                     foodImageMap.put(food.getId(), url);
@@ -1082,11 +1088,164 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    @Transactional
+    public void insertMyFood(SecurityUser securityUser, SaveDailyReportDto saveDailyReportDto) {
+        User user = userUtil.getUser(securityUser);
+
+        String type = "user";
+        String title = user.getName() + "님의 식사";
+        DailyReport dailyReport = dailyReportMapper.toEntity(user, saveDailyReportDto, type, title);
+
+        DailyReport saved = dailyReportRepository.save(dailyReport);
+        if (saved.getId() == null) {
+            throw new ApiException(ExceptionEnum.SAVE_FAILED);
+        }
+
+    }
+
+    @Override
+    public Object getReport(SecurityUser securityUser, String date) {
+        List<FindDailyReportResDto> resDtoArrayList = new ArrayList<>();
+        DailyReportResDto result = new DailyReportResDto();
+
+        User user = userUtil.getUser(securityUser);
+
+        List<DailyReport> dailyReportList = qDailyReportRepository.findByUserIdAndDate(user.getId(), date);
+
+        if (dailyReportList.isEmpty()) {
+            result.setTotalProtein(0);
+            result.setTotalFat(0);
+            result.setTotalCarbohydrate(0);
+            result.setTotalCalorie(0);
+            result.setDailyReportResDtoList(resDtoArrayList);
+            return result;
+        }
+
+        for (DailyReport dailyReport : dailyReportList) {
+            FindDailyReportResDto findDailyReportDto = dailyReportMapper.toFindDailyReportDto(dailyReport);
+            resDtoArrayList.add(findDailyReportDto);
+        }
+        result.setDailyReportResDtoList(resDtoArrayList);
+        int n = 0;
+        result.setTotalCalorie(resDtoArrayList.stream().map(v -> Math.addExact(n, v.getCalorie())).mapToInt(Integer::intValue).sum());
+        result.setTotalCarbohydrate(resDtoArrayList.stream().map(v -> Math.addExact(n, v.getCarbohydrate())).mapToInt(Integer::intValue).sum());
+        result.setTotalFat(resDtoArrayList.stream().map(v -> Math.addExact(n, v.getFat())).mapToInt(Integer::intValue).sum());
+        result.setTotalProtein(resDtoArrayList.stream().map(v -> Math.addExact(n, v.getProtein())).mapToInt(Integer::intValue).sum());
+
+        return result;
+    }
+
+    @Override
+    @Transactional
+    public void saveDailyReportFood(SecurityUser securityUser, SaveDailyReportFoodReqDto dto) {
+        User user = userUtil.getUser(securityUser);
+
+        //해당 날짜에 주문한 내역을 불러오기
+        List<OrderItemDailyFood> orderItemDailyFoodList = qOrderDailyFoodRepository.findAllUserIdAndDate(user.getId(), LocalDate.parse(dto.getStartDate()), LocalDate.parse(dto.getEndDate()));
+
+        for (OrderItemDailyFood orderItemDailyFood : orderItemDailyFoodList) {
+            //매핑 후 저장
+            String imageLocation = null;
+            if (!orderItemDailyFood.getDailyFood().getFood().getImages().isEmpty()) {
+                imageLocation = orderItemDailyFood.getDailyFood().getFood().getImages().get(0).getLocation();
+            }
+            OrderItemDailyFoodToDailyReportDto dailyReportDto = orderItemDailyFoodDailyReportMapper.toDailyReportDto(orderItemDailyFood, imageLocation);
+            DailyReport dailyReport = dailyReportMapper.toEntityByOrderItemDailyFood(user, dailyReportDto, "order");
+            dailyReportRepository.save(dailyReport);
+        }
+    }
+
+    @Override
+    @Transactional
+    public String deleteReport(SecurityUser securityUser, BigInteger reportId) {
+        User user = userUtil.getUser(securityUser);
+
+        long deleteResult = qDailyReportRepository.deleteReport(user.getId(), reportId);
+        if (deleteResult == 0) return "제거에 실패헸습니다.";
+
+        return "제거에 성공했습니다.";
+    }
+
+    @Override
+    public Object getOrderByDateAndDiningType(SecurityUser securityUser, String date, Integer diningType) {
+        List<OrderByDateAndDiningTypeResDto> resultList = new ArrayList<>();
+
+        User user = userUtil.getUser(securityUser);
+
+        List<OrderItemDailyFood> orderItemDailyFoodList = qOrderDailyFoodRepository.findAllByDateAndDiningType(user.getId(), date, diningType);
+
+        if (orderItemDailyFoodList.isEmpty()) return resultList;
+
+
+        for (OrderItemDailyFood orderItemDailyFood : orderItemDailyFoodList) {
+            String spotName = orderItemDailyFood.getDailyFood().getGroup().getName();
+            String location = null;
+            if (!orderItemDailyFood.getDailyFood().getFood().getImages().isEmpty())
+                location = orderItemDailyFood.getDailyFood().getFood().getImages().get(0).getLocation();
+            OrderByDateAndDiningTypeResDto orderByDateDto = orderItemDailyFoodDailyReportMapper.toOrderByDateDto(orderItemDailyFood, location, spotName);
+            resultList.add(orderByDateDto);
+        }
+
+        return resultList;
+    }
+
+    @Override
     public void allChangeAlarmSetting(SecurityUser securityUser, Boolean isActive) {
         User user = userUtil.getUser(securityUser);
 
         List<PushCondition> pushConditionList = List.of(PushCondition.class.getEnumConstants());
 
         user.updatePushCondition(pushConditionList);
+    }
+
+    @Override
+    public MealHistoryResDto getMealHistory(SecurityUser securityUser, String startDate, String endDate) {
+
+        MealHistoryResDto mealHistoryResDto = new MealHistoryResDto();
+        User user = userUtil.getUser(securityUser);
+
+        List<DailyReportByDate> dailyReportList = qDailyReportRepository.findByUserIdAndDateBetween(user.getId(), LocalDate.parse(startDate), LocalDate.parse(endDate));
+
+        if (dailyReportList.isEmpty()) return mealHistoryResDto;
+
+        mealHistoryResDto.setDailyReportList(dailyReportList.stream().filter(v -> !v.getCalorie().equals(0)).toList());
+
+        return mealHistoryResDto;
+
+    }
+
+    @Override
+    @Transactional
+    public void saveDailyReport(SecurityUser securityUser, SaveDailyReportReqDto saveDailyReportDto) {
+
+        User user = userUtil.getUser(securityUser);
+        DailyFood dailyFood = dailyFoodRepository.findById(saveDailyReportDto.getDailyFoodId()).orElseThrow(() -> new ApiException(ExceptionEnum.NOT_FOUND_FOOD));
+
+        SaveDailyReportDto dailyReportDto = generatedSaveDailyReportDto(dailyFood);
+        if (!dailyFood.getFood().getImages().isEmpty()) {
+            dailyReportRepository.save(dailyReportMapper.toEntity(user, dailyReportDto, "add", dailyFood.getFood().getMakers().getName(), dailyFood.getFood().getImages().get(0).getLocation()));
+        } else {
+            dailyReportRepository.save(dailyReportMapper.toEntity(user, dailyReportDto, "add", dailyFood.getFood().getMakers().getName(), null));
+        }
+
+    }
+
+    private SaveDailyReportDto generatedSaveDailyReportDto(DailyFood dailyFood) {
+        return SaveDailyReportDto.builder()
+                .fat(dailyFood.getFood().getFat() == null ? 0 : dailyFood.getFood().getFat())
+                .carbohydrate(dailyFood.getFood().getCarbohydrate() == null ? 0 : dailyFood.getFood().getCarbohydrate())
+                .protein(dailyFood.getFood().getProtein() == null ? 0 : dailyFood.getFood().getProtein())
+                .calorie(dailyFood.getFood().getCalorie() == null ? 0 : dailyFood.getFood().getCalorie())
+                .eatDate(dailyFood.getServiceDate().toString())
+                .name(dailyFood.getFood().getName())
+                .diningType(dailyFood.getDiningType().getCode())
+                .build();
+    }
+
+    private Integer getDailyFoodScheduleCount(List<OrderItemDailyFood> orderItemDailyFoods) {
+        return orderItemDailyFoods.stream()
+                .filter(orderItemDailyFood -> OrderStatus.beforeDelivered().contains(orderItemDailyFood.getOrderStatus()))
+                .mapToInt(OrderItemDailyFood::getCount)
+                .sum();
     }
 }
